# n2n

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYING  INSTALL  LICENSE  Makefile  Makefile.in  NEW_FEATURES.txt  README.md  allowed_communities.sample  autogen.sh  benchmark.c  community.list  config.mak.in  configure.ac  configure.seed  contributors.txt  edge.8  edge.c  edge_utils.c  egde_utils.c  example_edge_embed.c  example_edge_embed_quick_edge_init.c  example_sn_embed.c  gen_keyfile.py  header_encryption.c  header_encryption.h  huffman.c  huffman.h  n2n.7  n2n.c  n2n.h  n2n.spec  n2n_decode.c  n2n_keyfile.c  n2n_keyfile.h  n2n_transforms.h  (+26 more)
.ci/: build-project.ps1  install-vcpkg.ps1
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/openwrt/: Dockerfile  entrypoint.sh  test.sh
.github/workflows/: cmake-linux.yml  cmake.yml  debug.yml  lint.yml  makefile.yml  mymake.yml  mymake1.yml  openwrt.yml  release.yml  tests.yml  windows-artifacts.yml
android/: BUILD.txt  README.md  edge_android.c  edge_android.h  edge_jni.c  tuntap_android.c
android/Hin2n/: .gitignore  README.md  README_zh.md  build.gradle
android/Hin2n/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/Hin2n/app/src/androidTest/java/wang/switchy/hin2n/: ExampleInstrumentedTest.java
android/Hin2n/app/src/main/: AndroidManifest.xml
android/Hin2n/app/src/main/cpp/: tun2tap  uip
android/Hin2n/app/src/main/java/wang/switchy/hin2n/: Hin2nApplication.java
android/Hin2n/app/src/main/java/wang/switchy/hin2n/activity/: BaseActivity.java  ListActivity.java  MainActivity.java  SettingDetailsActivity.java
android/Hin2n/app/src/main/java/wang/switchy/hin2n/adapter/: SettingItemAdapter.java
android/Hin2n/app/src/main/java/wang/switchy/hin2n/entity/: SettingItemEntity.java
android/Hin2n/app/src/main/java/wang/switchy/hin2n/event/: ErrorEvent.java  StartEvent.java  StopEvent.java
android/Hin2n/app/src/main/java/wang/switchy/hin2n/model/: EdgeCmd.java  EdgeStatus.java  N2NSettingInfo.java
android/Hin2n/app/src/main/java/wang/switchy/hin2n/service/: N2NService.java
android/Hin2n/app/src/main/java/wang/switchy/hin2n/storage/db/base/: DaoMaster.java  DaoSession.java  N2NSettingModelDao.java
android/Hin2n/app/src/main/java/wang/switchy/hin2n/storage/db/base/model/: N2NSettingModel.java
android/Hin2n/app/src/main/java/wang/switchy/hin2n/template/: BaseTemplate.java  CommonTitleTemplate.java  EmptyTemplate.java  MainTitleTemplate.java
android/Hin2n/app/src/main/res/drawable/: titlebar_icon_return_selector.xml
android/Hin2n/app/src/main/res/layout/: activity_add_item.xml  activity_main.xml  activity_setting_list.xml  layout_setting_item.xml  main_template_view.xml
android/Hin2n/app/src/main/res/values/: strings.xml
android/Hin2n/app/src/test/java/wang/switchy/hin2n/: ExampleUnitTest.java
android/tun2tap/: tun2tap.c  tun2tap.h  tun2tap_appdef.h  uip-conf.h
debian/: README.Debian  changelog  control  copyright  n2n-edge.default  n2n-edge.init  n2n-edge.install  n2n-edge.manpages  n2n-supernode.init  n2n-supernode.install  n2n-supernode.manpages  rules
doc/: Advanced.md  Authentication.md  Bridging.md  BuildConfig.md  Building.md  CRYPTO.md  Centos.md  Communities.md  ConfigurationFiles.md  Crypto.md  Faq.md  Federation.md  HACKING  Hacking.md  IPv6.md  MTU.md  ManagementAPI.md  NEW_FEATURES.txt  Routing.md  Scratchpad.md  Scripts.md  TapConfiguration.md  Tools.md  TrafficRestrictions.md  Windows.md  macOS.md  n2n_gateway.sh  n2n_on_MacOS.txt  new-features.md  rpm-packaging.md  windows
examples/: Makefile  example_edge_embed.c  example_edge_embed_quick_edge_init.c  example_sn_embed.c
image-platforms/: Dockerfile.arm32v7  Dockerfile.x86_64
image-platforms/common/: dependencies.pkglist  prepare-build.sh
include/: aes.h  auth.h  cc20.h  curve25519.h  edge_utils_win32.h  header_encryption.h  hexdump.h  json.h  lzoconf.h  lzodefs.h  minilzo.h  n2n.h  n2n_define.h  n2n_port_mapping.h  n2n_regex.h  n2n_transforms.h  n2n_typedefs.h  n2n_upnpc.h  n2n_wire.h  network_traffic_filter.h  pearson.h  portable_endian.h  random_numbers.h  sn_selection.h  speck.h  tf.h  twofish.h  uthash.h
legacy/: README.md  edge_keyschedule.c  n2n_keyfile.h
openwrt/kamikaze/: Makefile
scripts/: README.md  cmake_all.sh  hack_fakeautoconf  hack_fakeautoconf.sh  indent.sh  mk_SRPM.sh  mk_deb.sh  mk_tar.sh  n2n-ctl  n2n-gateway.sh  n2n-httpd  n2nctl  n2nhttpd  test_harness  test_harness.sh  test_integration.sh  test_integration_edge.sh  test_integration_supernode.sh  test_units.sh  version.sh
scripts/munin/: n2n_
src/: aes.c  auth.c  cc20.c  curve25519.c  edge.c  edge_management.c  edge_utils.c  edge_utils_win32.c  example_edge_embed.c  example_edge_embed_quick_edge_init.c  example_sn_embed.c  header_encryption.c  hexdump.c  json.c  management.c  management.h  minilzo.c  n2n.c  n2n_port_mapping.c  n2n_regex.c  n2n_upnpc.c  network_traffic_filter.c  pearson.c  random_numbers.c  sn.c  sn_management.c  sn_selection.c  sn_utils.c  speck.c  strbuf.h  supernode.c  tf.c  transform_aes.c  transform_cc20.c  transform_lzo.c  transform_null.c  transform_speck.c  transform_tf.c  transform_zstd.c  tuntap_freebsd.c  (+5 more)
src/win32/: defs.h  edge.rc  edge_utils_win32.c  edge_utils_win32.h  getopt.c  getopt.h  n2n_win32.h  wintap.c  wintap.h
tests/: test_integration_edge.sh.expected  test_integration_supernode.sh.expected  tests-auth.expected  tests-compress.expected  tests-elliptic.expected  tests-hashing.expected  tests-transform.expected  tests-wire.expected  tests_integration.list  tests_units.list
tools/: Makefile  Makefile.in  benchmark.c  config.mak.in  keygen.c  n2n-benchmark.c  n2n-decode.c  n2n-keygen.c  n2n-portfwd  n2n-portfwd.c  n2n-route  n2n-route.c  n2n_decode.c  test_harness  tests-auth.c  tests-compress.c  tests-elliptic.c  tests-hashing.c  tests-transform.c  tests-wire.c
win32/: CMakeLists.txt  Makefile  edge.manifest  getopt.c  getopt1.c  n2n_win32.h  version-msvc.c  winconfig.h  wintap.c  wintap.h
win32/DotNet/: n2n.sln  (+2 more)
wireshark/: README.md  n2n.lua
(+11 files in other folders)
